--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link href="http://jkrajniak.pl/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Jakub Krajniak Atom">
 
   <meta charset="utf-8" />
+  <meta name="google-site-verification" content="OjNM6U8LmBdgG4aZrUHIPmKD8Dsn_BwmjXjtyMtv4vA" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="robots" content="" />
   <meta name="author" content="Jakub Krajniak" />
