--- a/witek/index.html
+++ b/witek/index.html
@@ -1,1 +1,74 @@
-abc
+<!DOCTYPE html>
+<html>
+
+<head>
+  <title>Lista prezentowa - Witek</title>
+  <meta charset="utf-8" />
+  <!-- Compiled and minified CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+
+  <!-- Compiled and minified JavaScript -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  <!--Import Google Icon Font-->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <!--Import materialize.css-->
+  <link type="text/css" rel="stylesheet" href="css/main.css" media="screen,projection" />
+
+  <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
+
+  <script src="js/main.js"></script>
+
+  <!--Let browser know website is optimized for mobile-->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+</head>
+
+<body>
+
+  <nav>
+    <div class="nav-wrapper">
+      <div class="col s12">
+        <a href="#!" class="breadcrumb">Lista prezentowa Witka</a>
+      </div>
+    </div>
+  </nav>
+  <div id="overlay">
+    <div class="cv-spinner">
+      <span class="spinner"></span>
+    </div>
+  </div>
+  <div class="container">
+    <div class="row">
+      <ul id="wishlist" class="collapsible popout">
+      </ul>
+    </div>
+  </div>
+  <div id="modal1" class="modal">
+    <form>
+      <div class="modal-content">
+        <h3>Wybieram prezent: <span id="present-name"></span></h3>
+        <div class="row">
+          <div class="input-field col s12">
+            <i class="material-icons prefix">mode_edit</i>
+            <textarea id="icon_prefix2" class="materialize-textarea" name="who"></textarea>
+            <label for="icon_prefix2">Kto?</label>
+          </div>
+          <div class="input-field col s12">
+            <label>
+              <input type="checkbox" name="anony" id="check_anony" />
+              <span>anonimowo</span>
+            </label>
+          </div>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <span style="display: none" id="rowid"></span>
+        <a href="#!" id="select-item" class="modal-close waves-effect waves-green btn">Wybieram</a>
+      </div>
+    </form>
+  </div>
+  <!--JavaScript at end of body for optimized loading-->
+  <script type="text/javascript" src="js/materialize.min.js"></script>
+</body>
+
+</html>
+<!-- [END sheets_quickstart] -->
