--- a/witek/index.html
+++ b/witek/index.html
@@ -2,6 +2,15 @@
 <html>
 
 <head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-MQMXB5SSBH"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-MQMXB5SSBH');
+</script>
   <title>Lista prezentowa - Witek</title>
   <meta charset="utf-8" />
   <!-- Compiled and minified CSS -->
